src/css/inventory.css
/* INVENTORY */

.side-btn-container {
    display: flex;
    width: 20%;
  }
  
  .section-center {
    background: rgba(0, 0, 0, 0.199);
    border-radius: 0.25rem;
    box-shadow: rgba(128, 128, 128, 0.212);
    transition: all 0.3s linear;
    padding: 2rem;
  }
  .section-center:hover {
    box-shadow: rgba(44, 44, 44, 0.589);
  }
  
  .form-control {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    align-items: center;
  }
  
  input:hover::placeholder {
    color: var(--light);
  }
  
  .truckLoad {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 0.2rem;
    transition: var(--transition);
    padding: 0.25rem 1rem;
    text-transform: capitalize;
    background: white;
    padding-bottom: 5px;
  }
  
  .truckLoad:hover {
    color: gray;
    background: var(--dark-gray);
  }
  
  .truckLoad:hover > .items {
    color: var(--text);
  }
  
  .items {
    margin-bottom: 0;
    color: var(--dark);
    letter-spacing: 2px;
    transition: var(--transition);
  }
  
  .edit-btn,
  .delete-btn {
    background: transparent;
    border-color: transparent;
    cursor: pointer;
    font-size: 0.8rem;
    margin: 0 0.15rem;
    transition: var(--transition);
  }
  .edit-btn {
    color: rgb(3, 129, 3);
  }
  .edit-btn:hover {
    color: rgb(8, 228, 8);
  }
  .delete-btn {
    color: rgb(170, 5, 5);
  }
  .delete-btn:hover {
    color: rgb(248, 0, 0);
  }
  .clear-btn {
    text-transform: capitalize;
    width: 10rem;
    height: 1.5rem;
    display: grid;
    align-items: center;
    background: transparent;
    border-color: transparent;
    color: red;
    margin: 0 auto;
    font-size: 0.85rem;
    letter-spacing: 0.1rem;
    cursor: pointer;
    transition: var(--transition);
    margin-top: 1.25rem;
  }
  .clear-btn:hover {
    color: rgb(110, 14, 14);
  }
  
  .truckLoad-list {
    border-radius: .25em;
  }

  .truckLoad:nth-child(even) {
    background: rgb(194, 192, 192);

  }
  .truckLoad:nth-child(odd):hover {
    background: black;

  }

  /* Main button styles for entire site */
.submit-btn {
  border-color: transparent;
  width: clamp(10rem, -0.875rem + 8.333vw, 14rem);
  height: clamp(3rem, -0.875rem + 8.333vw, 4.5rem);
  min-width: 6rem;
  min-height: 2rem;
  background: var(--sections);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  color: var(--text);
  cursor: pointer;
  align-self: center;
  box-shadow: 0px 4px 4px rgba(59, 75, 119, 0.45);
  text-shadow: 0px 4px 4px rgba(164, 188, 236, 0.45);
  outline-style: none;
  text-align: center;
  margin: 5% 0 5.5%;
  font-size: 1.5rem;
}

